recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)   
{
  if (steps > 0)
  {
  	avance(0)
  	gauche(90)
  	spirale(steps - 1, angle, length + increment, increment)
  }
}